k8s/blue-green/3blue-green-cluster-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: CLUSTER_NAME
  namespace: NAME_SPACE
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: APP_NAME-VERSION
    release: 'VERSION'
