k8s/blue-green/4blue-green-virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: VIRTUAL_NAME
spec:
  gateways:
    - istio-istio-gateway.default.svc.cluster.local
  hosts:
    - DNS_NAME.cotest.softwarization.net
  http:
    - route:
        - destination:
            host: CLUSTER_NAME.NAME_SPACE.svc.cluster.local
            port:
              number: 80
      timeout: 30s
